--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Kinect4EsriMap\packages.config" />
   <repository path="..\Kinect4Map\packages.config" />
   <repository path="..\Kinect4TelerikMap\packages.config" />
   <repository path="..\Leap4TelerikMap\packages.config" />
