--- a/src/Kinect4TelerikMap/Kinect4TelerikMap.csproj
+++ b/src/Kinect4TelerikMap/Kinect4TelerikMap.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Gestures\MapClickGestureHandler.cs" />
     <Compile Include="Gestures\MapZoomGestureHandler.cs" />
     <Compile Include="Gestures\MapPanGestureHandler.cs" />
-    <Compile Include="MapUtils\TelerikMapHandler.cs" />
+    <Compile Include="Handler\TelerikMapHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +80,10 @@
     <ProjectReference Include="..\MapUtils\MapUtils.csproj">
       <Project>{C0270F25-C396-48D9-A8CC-3C4D51F65B13}</Project>
       <Name>MapUtils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NUI4Map\NUI4Map.csproj">
+      <Project>{cdc34235-020e-4368-962c-85c182c4d4ac}</Project>
+      <Name>NUI4Map</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
