--- a/src/Leap4Map/Leap4Map.csproj
+++ b/src/Leap4Map/Leap4Map.csproj
@@ -55,22 +55,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DI\LeapMapModule.cs" />
-    <Compile Include="Drawing\HandsDrawer.cs" />
-    <Compile Include="Drawing\HandsState.cs" />
-    <Compile Include="Drawing\IHandsDrawer.cs" />
+    <Compile Include="Drawing\ControllerDrawer.cs" />
     <Compile Include="Extensions\LeapMapExtensions.cs" />
-    <Compile Include="Gestures\IMapClickGestureHandler.cs" />
-    <Compile Include="Gestures\IMapPanGestureHandler.cs" />
-    <Compile Include="Gestures\IMapZoomGestureHandler.cs" />
     <Compile Include="Gestures\MapClickGestureHandlerBase.cs" />
     <Compile Include="Gestures\MapPanGestureHandlerBase.cs" />
     <Compile Include="Gestures\MapZoomGestureHandlerBase.cs" />
-    <Compile Include="LeapUtils\LeapHandler.cs" />
-    <Compile Include="LeapUtils\LeapListener.cs" />
-    <Compile Include="LeapUtils\SkeletalExtensions.cs" />
-    <Compile Include="MapUtils\IMapHandler.cs" />
+    <Compile Include="Handler\LeapHandler.cs" />
+    <Compile Include="Handler\LeapListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structs\Hand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
@@ -82,7 +74,12 @@
       <Project>{C0270F25-C396-48D9-A8CC-3C4D51F65B13}</Project>
       <Name>MapUtils</Name>
     </ProjectReference>
+    <ProjectReference Include="..\NUI4Map\NUI4Map.csproj">
+      <Project>{cdc34235-020e-4368-962c-85c182c4d4ac}</Project>
+      <Name>NUI4Map</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
