--- a/src/Kinect4EsriMap/Kinect4EsriMap.csproj
+++ b/src/Kinect4EsriMap/Kinect4EsriMap.csproj
@@ -56,7 +56,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DI\EsriMapModule.cs" />
+    <Compile Include="DI\KinectEsriMapModule.cs" />
     <Compile Include="Gestures\MapClickGestureHandler.cs" />
     <Compile Include="Gestures\MapZoomGestureHandler.cs" />
     <Compile Include="Gestures\MapPanGestureHandler.cs" />
