--- a/src/NUI4Map/NUI4Map.csproj
+++ b/src/NUI4Map/NUI4Map.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Handler\INUIHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structs\Hand.cs" />
+    <Compile Include="Structs\MapControlType.cs" />
+    <Compile Include="Structs\SensorType.cs" />
     <Compile Include="Structs\Vector3D.cs" />
   </ItemGroup>
   <ItemGroup />
