--- a/src/TelerikMapCommons/TelerikMapCommons.csproj
+++ b/src/TelerikMapCommons/TelerikMapCommons.csproj
@@ -1,18 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2E04D876-E46B-40C7-8D21-C7818003EBDF}</ProjectGuid>
+    <ProjectGuid>{8C26910E-E43E-4C1C-A700-E4EC780A4170}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Leap4TelerikMap</RootNamespace>
-    <AssemblyName>Leap4TelerikMap</AssemblyName>
+    <RootNamespace>TelerikMapCommons</RootNamespace>
+    <AssemblyName>TelerikMapCommons</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,22 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.3.0.2\lib\net40\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.3.0.2\lib\net40\Autofac.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="LeapCSharp.NET4.0">
-      <HintPath>..\..\..\..\..\Instaladores\Leap_Developer_Kit_0.7.9_3460_Windows\LeapSDK\lib\LeapCSharp.NET4.0.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,35 +62,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DI\LeapTelerikMapModule.cs" />
-    <Compile Include="Extensions\LeapTelerikMapExtensions.cs" />
-    <Compile Include="Gestures\MapClickGestureHandler.cs" />
-    <Compile Include="Gestures\MapZoomGestureHandler.cs" />
-    <Compile Include="Gestures\MapPanGestureHandler.cs" />
+    <Compile Include="Extensions\TelerikMapExtensions.cs" />
+    <Compile Include="Handler\TelerikMapHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Leap4Map\Leap4Map.csproj">
-      <Project>{e3457d21-a977-47c5-839d-e964f06aee58}</Project>
-      <Name>Leap4Map</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MapUtils\MapUtils.csproj">
-      <Project>{C0270F25-C396-48D9-A8CC-3C4D51F65B13}</Project>
+      <Project>{c0270f25-c396-48d9-a8cc-3c4d51f65b13}</Project>
       <Name>MapUtils</Name>
     </ProjectReference>
     <ProjectReference Include="..\NUI4Map\NUI4Map.csproj">
       <Project>{cdc34235-020e-4368-962c-85c182c4d4ac}</Project>
       <Name>NUI4Map</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TelerikMapCommons\TelerikMapCommons.csproj">
-      <Project>{8c26910e-e43e-4c1c-a700-e4ec780a4170}</Project>
-      <Name>TelerikMapCommons</Name>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
