--- a/src/SampleWPFMapApp/SampleWPFMapApp.csproj
+++ b/src/SampleWPFMapApp/SampleWPFMapApp.csproj
@@ -208,6 +208,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Expression\Blend\.NETFramework\v4.0\Microsoft.Expression.Blend.WPF.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>call "$(SolutionDir)\Leap4Map\libs\CopyLeapAPI.bat" $(PlatformName)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
